--- a/SwappingScreens/Base.lproj/Main.storyboard
+++ b/SwappingScreens/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--LoginVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginVC" customModule="SwappingScreens" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,143 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xiS-A3-8BJ">
+                                <rect key="frame" x="77.5" y="61" width="220" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="5Ul-5a-neY"/>
+                                    <constraint firstAttribute="height" constant="30" id="tEA-7a-00s"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ieM-CA-vcJ">
+                                <rect key="frame" x="77.5" y="112" width="220" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="RKh-wb-8D9"/>
+                                    <constraint firstAttribute="height" constant="30" id="zEB-zT-ZE2"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fpg-HI-qZ8">
+                                <rect key="frame" x="133.5" y="192" width="108" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="108" id="CbO-hp-Ek2"/>
+                                    <constraint firstAttribute="height" constant="30" id="z06-ku-R8q"/>
+                                </constraints>
+                                <state key="normal" title="Login Now!"/>
+                                <connections>
+                                    <segue destination="pGR-ER-xKl" kind="show" id="k7O-86-mkr"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fpg-HI-qZ8" firstAttribute="top" secondItem="ieM-CA-vcJ" secondAttribute="bottom" constant="50" id="Fre-gx-Mgs"/>
+                            <constraint firstItem="xiS-A3-8BJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="41" id="PqH-lG-GVi"/>
+                            <constraint firstItem="fpg-HI-qZ8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aEL-Qh-LD3"/>
+                            <constraint firstItem="xiS-A3-8BJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="j2j-OL-5nH"/>
+                            <constraint firstItem="ieM-CA-vcJ" firstAttribute="top" secondItem="xiS-A3-8BJ" secondAttribute="bottom" constant="21" id="jZt-4p-IPK"/>
+                            <constraint firstItem="ieM-CA-vcJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nch-iv-Pfh"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="24.800000000000001" y="36.431784107946029"/>
+        </scene>
+        <!--Music ListVC-->
+        <scene sceneID="VtZ-AP-SaL">
+            <objects>
+                <viewController id="pGR-ER-xKl" customClass="MusicListVC" customModule="SwappingScreens" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="pb6-Vr-rMZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="aZJ-eV-HoK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wtK-OI-Kxy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UHI-hq-e7q">
+                                <rect key="frame" x="16" y="28" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="iIA-xQ-ajo"/>
+                                    <constraint firstAttribute="width" constant="46" id="vGa-gC-edb"/>
+                                </constraints>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backBtnPressed:" destination="pGR-ER-xKl" eventType="touchUpInside" id="KbY-hX-Psi"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3c9-ju-v1q">
+                                <rect key="frame" x="131" y="318" width="113" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="TAx-KR-Jdg"/>
+                                    <constraint firstAttribute="width" constant="113" id="gw5-w0-E0l"/>
+                                </constraints>
+                                <state key="normal" title="Load 3rd Screen"/>
+                                <connections>
+                                    <action selector="load3rdScreenPressed:" destination="pGR-ER-xKl" eventType="touchUpInside" id="OWl-ge-dFw"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UHI-hq-e7q" firstAttribute="leading" secondItem="wtK-OI-Kxy" secondAttribute="leadingMargin" id="DYq-ES-RYS"/>
+                            <constraint firstItem="3c9-ju-v1q" firstAttribute="centerX" secondItem="wtK-OI-Kxy" secondAttribute="centerX" id="j0r-Ll-QbE"/>
+                            <constraint firstItem="UHI-hq-e7q" firstAttribute="top" secondItem="pb6-Vr-rMZ" secondAttribute="bottom" constant="8" id="vTH-7n-mGL"/>
+                            <constraint firstItem="3c9-ju-v1q" firstAttribute="centerY" secondItem="wtK-OI-Kxy" secondAttribute="centerY" id="wWL-jU-071"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="Pi0-Ks-NXv" kind="showDetail" identifier="PlaySongVC" id="87V-Xx-adZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4S8-NS-AWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="782" y="36"/>
+        </scene>
+        <!--Play SongVC-->
+        <scene sceneID="Rnz-GW-caH">
+            <objects>
+                <viewController id="Pi0-Ks-NXv" customClass="PlaySongVC" customModule="SwappingScreens" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3cK-E8-MkQ"/>
+                        <viewControllerLayoutGuide type="bottom" id="4av-Zx-4dV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XFs-nW-mfS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Song Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJH-uy-qMR">
+                                <rect key="frame" x="71" y="72" width="234" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="234" id="ebh-9R-HKa"/>
+                                    <constraint firstAttribute="height" constant="21" id="yWW-sK-fPU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="iJH-uy-qMR" firstAttribute="centerX" secondItem="XFs-nW-mfS" secondAttribute="centerX" id="LF3-4k-uY0"/>
+                            <constraint firstItem="iJH-uy-qMR" firstAttribute="top" secondItem="3cK-E8-MkQ" secondAttribute="bottom" constant="52" id="Ruz-m5-u8h"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="songTitleLbl" destination="iJH-uy-qMR" id="Ces-lU-kp8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J56-NS-Kc4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1525.5999999999999" y="35.532233883058474"/>
         </scene>
     </scenes>
 </document>
